CVS Code -

nano-1.1.3 - 10/26/2001
- General
	- Finally wrote function-specific help mode.  Changes to
	  nano.c:help_init() and winio.c:do_help().  Changed
	  currshortcut and currslen #ifdefs to depend on both 
	  DISABLE_HELP and DISABLE_MOUSE being defined to not 
	  include.  Changed all the shortcuts and lengths.
	- Fixed null_at to ACTUALLY DO SOMETHING with its arg.  Again,
	  this was causing nasty errors if the call to nrealloc moved
	  where the data was located.
	- Changed header comments to say "version 2" instead of "version
	  1" as the COPYING file is actually version 2 of the GPL (bug
	  noticed by Jordi Mallach).
- cut.c:
  do_cut_text()
	-  Check to see whether marked text is contained within edit
	   window and if so only do an edit_refresh (variable dontupdate
	   replaces cuttingpartialline).
  do_uncut_text()
	- Similar display fixes (David Lawrence Ramsey).
- faq.html
	- Removed nano-editor.org FTP site address [deprecated] and added
	the GNU one.
- files.c:
	- Added status messages for converted DOS and Mac files.
	  People should know that their file wasnt normally formatted.	
  load_file()
	- Status message when trying to load an already loaded file with multiple
	  buffers (David Lawrence Ramsey).
  read_file()
	- Get rid of useless linetemp variable and name num_lines int
	  (David Lawrence Ramsey).
- nano.c:
	- New function do_prev_word, similar to do_next_word.  Hard coded as
	  Alt-space, as next word is hard coded as control-space. Fixed
	  goofy logic setting x pos to value of last line when hitting the
	  beginning of first line, prog should simply abort.  Added
	  the #ifdefs around the code in main().
- nano.h:
	- Additional #define, SMALL_TOO to determine how long
	  MAIN_LIST_LEN is.  We need this because of the find matching
	  bracket code.
  main()
	- Moved #ifndef NANO_SMALL down past the case 0: line so
	  control-space doesn't insert a \0 (ack!)
- rcfile.c:
	- Fix incorrect number of rc options (David Lawrence Ramsey).