@@ -3027,9 +3027,15 @@ int main(int argc, char *argv[])
 		    kbinput = KEY_PPAGE;
 		    wgetch(edit);
 		    break;
+		case 'I':	/* Alt-[-I = Page Up - FreeBSD Console */
+		    kbinput = KEY_PPAGE;
+		    break;
 		case '6':	/* Alt-[-6 = Page Down */
 		    kbinput = KEY_NPAGE;
 		    wgetch(edit);
+		    break;
+		case 'G':	/* Alt-[-G = Page Down - FreeBSD Console */
+		    kbinput = KEY_NPAGE;
 		    break;
 		case '7':
 		    kbinput = KEY_HOME;
@@ -3038,6 +3044,14 @@ int main(int argc, char *argv[])
 		case '8':
 		    kbinput = KEY_END;
 		    wgetch(edit);
+		    break;
+		case 'L':		/* Insert Key - FreeBSD Console */
+#ifdef ENABLE_MULTIBUFFER
+		    do_insertfile(ISSET(MULTIBUFFER));
+#else
+		    do_insertfile(0);
+#endif
+		    keyhandled = 1;
 		    break;
 		case '[':	/* Alt-[-[-[A-E], F1-F5 in linux console */
 		    kbinput = wgetch(edit);
